--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap resume</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -68,7 +68,6 @@
               <li><a href="skill.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Skills</span></a></li>
               <li><a href="project.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
               <li><a href="contact.html" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Contact</span></a></li>
-
               </ul>        
               </nav><!-- .nav-menu -->   
               </div>
